@@ -977,6 +977,24 @@ public abstract class AbstractUser extends User {
 		getKeyedMap().setObject(UserManagement.MAXSIMUP, maxSimUp);
 	}
 
+	public float getMinRatio() {
+		return getKeyedMap().containsKey(UserManagement.MINRATIO) ?
+				getKeyedMap().getObjectFloat(UserManagement.MINRATIO) : 3F;
+	}
+
+	public void setMinRatio(float minRatio) {
+		getKeyedMap().setObject(UserManagement.MINRATIO, minRatio);
+	}
+
+	public float getMaxRatio() {
+		return getKeyedMap().containsKey(UserManagement.MAXRATIO) ?
+				getKeyedMap().getObjectFloat(UserManagement.MAXRATIO) : 3F;
+	}
+
+	public void setMaxRatio(float maxRatio) {
+		getKeyedMap().setObject(UserManagement.MAXRATIO, maxRatio);
+	}
+
 	public int getMaxSimDown() {
 		return getKeyedMap().getObjectInt(UserManagement.MAXSIMDN);	
 	}
